Alterar a posição do menu de navegação de absoluta para fixa e ajustar a visibilidade para melhorar a experiência do usuário em dispositivos móveis.

--- a/style.css
+++ b/style.css
@@ -80,25 +80,23 @@ nav {
    
 @media (max-width: 999px) {
   .nav-list {
-    position: absolute;
+    position: fixed;
     top: 8vh;
-    right: -50vw;
+    right: -100vw;
     width: 50vw;
     height: 80vh;
     background: #000f52;
+    display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: space-around;
-    transform: translateX(100%);
-    transition: transform 0.3s ease-in-out;
+    transition: right 0.3s ease-in-out;
     visibility: hidden;  /* Esconde sem remover do fluxo */
     opacity: 0; /* Deixa invisível */
 }
 
 .nav-list.active {
     right: 0;
-    transform: translateX(0);
-    display: flex; /* Mostra o menu quando ativo */
     visibility: visible; /* Torna visível */
     opacity: 1;
   }
